menuchi-app/src/app/user/components/category/category.component.scss
::ng-deep .cdk-drag-preview {
  display: table;
}

::ng-deep .cdk-drag-placeholder {
  opacity: 0;
}

.cdk-drop-list-dragging .cdk-drag {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.cdk-drag-preview {
  background-color: #f7f7f7;
  box-sizing: border-box;
  border-radius: 4px;
  box-shadow:
    0 5px 5px -3px rgba(0, 0, 0, 0.2),
    0 8px 10px 1px rgba(0, 0, 0, 0.14),
    0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.cdk-drag-placeholder {
  opacity: 0;
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.cdk-drag-placeholder {
  opacity: 0;
}

.container {
  height: 100%;
  overflow-y: hidden;

  .cat-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    h3 {
      color: #243e62;
      font-size: 1.1rem;
    }

    .move-add-box {
      display: flex;
      flex-direction: row;
      gap: 0.2rem;

      nz-icon {
        font-size: 1rem;
        cursor: pointer;

        &.move-icon {
          cursor: move;
        }

        &.add-item-icon {
          padding-inline: 4px;
          padding-block: 4px;
          border-radius: 50%;
          transition: background-color 0.4s ease;

          &:hover {
            background-color: rgba(28, 39, 76, 0.1);
          }
        }
      }
    }
  }

  .drag-list {
    height: 100%;
    overflow-y: scroll;
    display: flex;
    flex-direction: column;

    .add-item-btn {
      background-color: #aaaaaa;
      border-color: #aaaaaa;
      font-size: 0.9rem;
      font-weight: 402;
      width: 97%;
      margin-block-start: 1rem;
      margin-block-end: 3rem;
      align-self: center;
    }

    nz-card {
      width: 19rem;
      border-color: #d0d3d7;
      border-radius: 0;
      cursor: grab;
      //margin-top: 0 !important;

      .header {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: start;

        h4 {
          color: #243e62;
        }

        > nz-icon {
          font-size: 1.2rem;
          font-weight: bolder;
          cursor: pointer;
          padding-inline: 2px;
          padding-block: 1px;
          border-radius: 50%;
          transition: background-color 0.4s ease;

          &:hover {
            background-color: rgba(28, 39, 76, 0.1);
          }
        }

        nz-dropdown-menu {
          ul {
            border-radius: 4px;
          }
        }
      }

      .item-content {
        //padding: 1rem;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        gap: 0.8rem;

        div {
          display: flex;
          flex-direction: column;
          justify-content: space-between;

          .ingredients {
            h3 {
              color: #243e62;
              font-size: 0.9rem;
            }

            p {
              color: rgba(30, 41, 59, 0.5);
              font-size: 0.9rem;
            }
          }

          .price {
            color: #1e293b;
            font-weight: 420;
            font-size: 0.9rem;
          }
        }

        .item-image {
          background-color: #aaaaaa;
          border-radius: 4px;
          height: 80px;
          width: 80px;
        }
      }
    }
  }
}

